# boost

app/apps/app_launcher/view/: panel_imu.cpp  panel_lcd_backlight.cpp  panel_rtc.cpp  panel_spk_volume.cpp  view.cpp  view.h
app/apps/app_startup_anim/: app_startup_anim.cpp  app_startup_anim.h
app/apps/utils/dsp/: boost_settings.cpp  boost_settings.h
tab5/: CMakeLists.txt  dirs.txt  sdkconfig
tab5/components/m5stack_tab5/: CMakeLists.txt  m5stack_tab5.c
tab5/components/m5stack_tab5/include/bsp/: m5stack_tab5.h
tab5/components/sensor_bmi270/include/: bmi270.h  bmi270_context.h
tab5/components/sensor_bmi270/src/: bmi270.c
tab5/main/: CMakeLists.txt  idf_component.yml
tab5/main/hal/components/: hal_audio.cpp
